[package]
name = "chronicles"
version = "0.1.0"
authors = ["Roland Godet <roland.godet@ens-paris-saclay.fr>"]
edition = "2018"

[lib]
name = "chronicles"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
aries_core = { path = "../core" }
aries_model = { path = "../model" }
aries_planners = { path = "../planners" }
aries_planning = { path = "../planning" }
aries_solver = { path = "../solver" }
aries_tnet = { path = "../tnet" }
aries_utils = { path = "../utils" }
pyo3 = { version = "0.16.0", features = ["extension-module"] }